Added attributes to @Deprecated annotations; code style